@@ -3,14 +3,27 @@ package com.blogservice.api.service;
 import com.blogservice.api.domain.Post;
 import com.blogservice.api.repository.PostRepository;
 import com.blogservice.api.request.PostCreate;
+import com.blogservice.api.request.PostSearch;
+import com.blogservice.api.response.PostResponse;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.util.Assert;
 
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+
 import static org.junit.jupiter.api.Assertions.*;
+import static org.springframework.data.domain.Sort.Direction.*;
 
 @SpringBootTest
 class PostServiceTest {
@@ -20,6 +33,15 @@ class PostServiceTest {
 
     @Autowired
     private PostRepository postRepository;
+
+    @Autowired
+    private JdbcTemplate jdbcTemplate;
+
+    @BeforeEach
+    void clean() {
+        jdbcTemplate.execute("TRUNCATE TABLE post");
+        jdbcTemplate.execute("ALTER TABLE post ALTER COLUMN id RESTART WITH 1");
+    }
 
     @Test
     @DisplayName("글 작성")
@@ -35,9 +57,54 @@ class PostServiceTest {
 
         // then
         assertEquals(1L, postRepository.count());
-        Post post = postRepository.findAll().get(0);
+        Post post = postRepository.findAll().getFirst();
         assertEquals("제목입니다.", post.getTitle());
         assertEquals("내용입니다.", post.getContent());
     }
 
+    @Test
+    @DisplayName("글 1개 조회")
+    void test2() {
+        // given
+        Post requestPost = Post.builder()
+                .title("foo").content("bar")
+                .build();
+        postRepository.save(requestPost);
+
+        // when
+        PostResponse response = postService.get(requestPost.getId());
+
+        // then
+        assertNotNull(response);
+        assertEquals(1L, postRepository.count());
+        assertEquals("foo", response.getTitle());
+        assertEquals("bar", response.getContent());
+    }
+
+    @Test
+    @DisplayName("글 첫 페이지 조회")
+    void test3() {
+        // given
+         List<Post> requestPosts = IntStream.range(1, 20)
+                         .mapToObj(i -> {
+                             return Post.builder()
+                                     .title("제목 " + i)
+                                     .content("내용 " + i)
+                                     .build();
+                         })
+                 .toList();
+        postRepository.saveAll(requestPosts);
+
+//        Pageable pageable = PageRequest.of(0, 5, Sort.by(DESC, "id"));
+        PostSearch postSearch = PostSearch.builder()
+                .page(1).size(10)
+                .build();
+
+        // when
+        List<PostResponse> posts = postService.getList(postSearch);
+
+        // then
+        assertEquals(10L, posts.size());
+        assertEquals("제목 19", posts.get(0).getTitle());
+    }
 }
